<resources>
    <string name="app_name">PreferenceFragmentCompatTest</string>

    <!--About-->
    <string name="em_pref_about">About</string>
    <string name="em_pref_about_version">SDK Version</string>

    <!--Notification-->
    <string name="em_pref_notification">Notification</string>
    <string name="em_pref_notification_switch">Notification Switch</string>
    <string name="em_pref_notification_summary">Set push notification</string>
    <string name="em_pref_notification_sound">Notification Sound</string>
    <string name="em_pref_notification_vibration">Notification vibration</string>
    <string name="em_pref_notification_display_name">Display name</string>

    <string name="em_pref_chat_call">Chat And Call</string>
    <string name="em_pref_chat_call_summary">Setting chat and call info</string>
    <string name="em_pref_group_invites">Group invites</string>
    <string name="em_pref_group_invites_summary">accept group invites automatically</string>
    <string name="em_pref_adaptive_video_bitrate">Adaptive video bitrate</string>
    <string name="em_pref_blocked_users">Blocked Users</string>

    <!--Setting Preference-->
    <string name="em_pref_key_about">em_pref_about</string>
    <string name="em_pref_key_notification">em_pref_notification</string>
    <string name="em_pref_key_notification_sound">em_pref_notification_sound</string>
    <string name="em_pref_key_notification_vibrate">em_pref_notification_vibrate</string>
    <string name="em_pref_key_notification_display_name">em_pref_notification_name</string>
    <string name="em_pref_key_accept_group_invite_automatically">em_pref_accept_group_invite_automatically</string>
    <string name="em_pref_key_adaptive_video_bitrate">em_pref_adaptive_video_bitrate</string>

    <!--Status-->
    <string name="em_pref_on">On</string>
    <string name="em_pref_off">Off</string>

</resources>